added button on/off background music

--- a/src/components/QuizGame/components/JoinRoom/JoinRoom.module.scss
+++ b/src/components/QuizGame/components/JoinRoom/JoinRoom.module.scss
@@ -11,10 +11,12 @@ $text-secondary: #795e65;
     align-items: center;
     gap: 20px;
     padding: 20px;
+    padding-bottom: 80px;
     border: 2px solid $accent-secondary;
     border-radius: 20px;
     background-color: $accent-primary;
     margin-bottom: 30px;
+    position: relative;
   }
 
   &__site {
@@ -53,6 +55,28 @@ $text-secondary: #795e65;
     &:hover:disabled {
       cursor: not-allowed;
     }
+  }
+
+  &__music {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    color: $text-main;
+    font-size: 20px;
+    border: 2px solid $accent-secondary;
+    border-radius: 10px;
+    background-color: $bg-main;
+    cursor: pointer;
+    padding: 5px 10px;
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    transition: all 0.4s;
+  }
+
+  &__music:active {
+    transform: scale(0.9);
   }
 
   &__players {
