--- a/src/components/QuizGame/components/Room/components/Game/Game.module.scss
+++ b/src/components/QuizGame/components/Room/components/Game/Game.module.scss
@@ -56,10 +56,57 @@ $text-secondary: #a28089;
     background-color: #fff;
     transition: width 1s linear;
   }
+
+  &__right {
+    padding: 20px;
+    background-color: #fff;
+    border: 2px solid #000;
+    border-radius: 10px;
+    font-size: 30px;
+    font-weight: 600;
+    text-align: center;
+
+    animation: boomIn 0.9s cubic-bezier(0.34, 1.56, 0.64, 1);
+  }
 }
 
 .chosen {
   background-color: rgb(246, 248, 99);
+}
+
+@keyframes boomIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.2) translateY(200px);
+    filter: blur(4px);
+  }
+
+  60% {
+    opacity: 1;
+    transform: scale(1.05) translateY(-10px);
+    filter: blur(0);
+  }
+
+  70% {
+    transform: scale(1.25) translateY(0);
+  }
+
+  75% {
+    transform: scale(0.95) translateX(-8px);
+  }
+  80% {
+    transform: scale(1.05) translateX(8px);
+  }
+  85% {
+    transform: scale(0.97) translateX(-4px);
+  }
+  90% {
+    transform: scale(1.02) translateX(4px);
+  }
+
+  100% {
+    transform: scale(1) translateX(0);
+  }
 }
 
 @media (max-width: 500px) {
