--- a/src/components/QuizGame/components/Room/components/Game/Game.module.scss
+++ b/src/components/QuizGame/components/Room/components/Game/Game.module.scss
@@ -58,6 +58,7 @@ $text-secondary: #a28089;
   }
 
   &__right {
+    margin: 0 10px;
     padding: 20px;
     background-color: #fff;
     border: 2px solid #000;
@@ -118,6 +119,11 @@ $text-secondary: #a28089;
     &__answer {
       padding: 5px;
       font-size: 16px;
+    }
+
+    &__right {
+      font-size: 20px;
+      padding: 10px;
     }
   }
 }
