--- a/src/components/QuizGame/components/Room/Room.module.scss
+++ b/src/components/QuizGame/components/Room/Room.module.scss
@@ -6,7 +6,7 @@ $text-secondary: #f8acac;
 
 .room {
   height: 100%;
-  background-color: $bg-main;
+  background-image: url("/quiz-backgrounds/room-bg.jpg");
   display: flex;
   justify-content: center;
   align-items: center;
