--- a/src/components/QuizGame/components/Question/Question.module.scss
+++ b/src/components/QuizGame/components/Question/Question.module.scss
@@ -5,6 +5,12 @@ $text-main: #553974;
 $text-secondary: #a28089;
 
 .question {
+  padding: 20px;
+  border: 2px solid $text-main;
+  border-radius: 20px;
+  background-color: $accent-primary;
+  box-shadow: 0 0 10px 0 $accent-primary;
+
   &__title {
     font-size: 60px;
     font-weight: 600;
@@ -29,7 +35,7 @@ $text-secondary: #a28089;
     font-size: 40px;
     background-color: $accent-primary;
     color: $text-main;
-    box-shadow: 0 0 10px 0 $accent-primary;
+    box-shadow: 0 0 10px 0 $accent-secondary;
 
     opacity: 0;
     animation: fadeSlide 0.5s ease forwards;
