--- a/src/components/QuizGame/components/QuestionNumber/QuestionNumber.module.scss
+++ b/src/components/QuizGame/components/QuestionNumber/QuestionNumber.module.scss
@@ -12,6 +12,12 @@ $text-secondary: #a28089;
   display: flex;
   flex-direction: column;
   gap: 20px;
+  padding: 10px;
+  border: 2px solid $text-main;
+  border-radius: 20px;
+  background-color: $accent-primary;
+  box-shadow: 0 0 10px 0 $accent-primary;
+  margin-bottom: 20px;
 
   animation: fadeSlide 0.7s ease forwards;
 }
