--- a/src/components/QuizGame/components/Room/components/Game/Game.module.scss
+++ b/src/components/QuizGame/components/Room/components/Game/Game.module.scss
@@ -63,11 +63,25 @@ $text-secondary: #a28089;
     background-color: #fff;
     border: 2px solid #000;
     border-radius: 10px;
-    font-size: 30px;
-    font-weight: 600;
-    text-align: center;
 
     animation: boomIn 0.9s cubic-bezier(0.34, 1.56, 0.64, 1);
+
+    h2 {
+      font-size: 30px;
+      font-weight: 600;
+      text-align: center;
+    }
+  }
+
+  &__message--right {
+    font-size: 16px;
+    text-align: center;
+    color: green;
+  }
+  &__message--wrong {
+    font-size: 16px;
+    text-align: center;
+    color: red;
   }
 }
 
@@ -122,8 +136,11 @@ $text-secondary: #a28089;
     }
 
     &__right {
-      font-size: 20px;
       padding: 10px;
+
+      h2 {
+        font-size: 20px;
+      }
     }
   }
 }
