--- a/src/components/QuizGame/components/Room/Room.module.scss
+++ b/src/components/QuizGame/components/Room/Room.module.scss
@@ -6,7 +6,9 @@ $text-secondary: #f8acac;
 
 .room {
   height: 100%;
-  background-image: url("/quiz-backgrounds/room-bg.jpg");
+  background-image: url("/quiz-backgrounds/bg2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
