--- a/src/components/QuizGame/components/Room/components/EndGame/EndGame.module.scss
+++ b/src/components/QuizGame/components/Room/components/EndGame/EndGame.module.scss
@@ -9,6 +9,10 @@ $text-secondary: #f8acac;
   flex-direction: column;
   align-items: center;
   gap: 30px;
+  padding: 10px;
+  border: 2px solid #000;
+  border-radius: 10px;
+  background-color: #fff;
 
   &__text {
     font-size: 30px;
