--- a/src/components/QuizGame/components/Room/components/Game/Game.module.scss
+++ b/src/components/QuizGame/components/Room/components/Game/Game.module.scss
@@ -14,6 +14,10 @@ $text-secondary: #a28089;
   &__question {
     font-size: 30px;
     text-align: center;
+    padding: 10px 20px;
+    border: 2px solid #000;
+    border-radius: 10px;
+    background-color: #fff;
   }
 
   &__answers {
