--- a/src/components/QuizGame/components/EndGame/EndGame.module.scss
+++ b/src/components/QuizGame/components/EndGame/EndGame.module.scss
@@ -13,6 +13,10 @@ $text-secondary: #a28089;
   &__text {
     font-size: 40px;
     color: $text-main;
+    padding: 10px 20px;
+    border: 2px solid $text-main;
+    border-radius: 10px;
+    background-color: $accent-primary;
   }
 
   &__users {
