--- a/src/components/QuizGame/components/Room/components/EnterTopic/EnterTopic.module.scss
+++ b/src/components/QuizGame/components/Room/components/EnterTopic/EnterTopic.module.scss
@@ -35,12 +35,18 @@ $text-secondary: #f8acac;
     padding: 15px 20px;
     border: 2px solid $text-main;
     border-radius: 10px;
+    background-color: $accent-secondary;
     cursor: pointer;
     transition: all 0.4s;
   }
 
   &__btn:active {
     transform: scale(0.9);
+  }
+
+  &__btn:disabled {
+    background-color: #fff;
+    cursor: not-allowed;
   }
 }
 
