--- a/src/components/QuizGame/components/Room/components/Game/components/GameQuestion/GameQuestion.module.scss
+++ b/src/components/QuizGame/components/Room/components/Game/components/GameQuestion/GameQuestion.module.scss
@@ -43,22 +43,22 @@ $text-secondary: #a28089;
     }
   }
 
-  &__bar {
-    max-width: 400px;
-    height: 15px;
-    background-color: #f3e963;
-    border: 2px solid #000;
-    border-radius: 5px;
-    margin: 0 auto;
-  }
+  // &__bar {
+  //   max-width: 400px;
+  //   height: 15px;
+  //   background-color: #f3e963;
+  //   border: 2px solid #000;
+  //   border-radius: 5px;
+  //   margin: 0 auto;
+  // }
 
-  &__bar--active {
-    height: 100%;
-    border: 0 solid $text-secondary;
-    border-radius: 5px;
-    background-color: #fff;
-    transition: width 1s linear;
-  }
+  // &__bar--active {
+  //   height: 100%;
+  //   border: 0 solid $text-secondary;
+  //   border-radius: 5px;
+  //   background-color: #fff;
+  //   transition: width 1s linear;
+  // }
 }
 
 .chosen {
