--- a/src/components/QuizGame/components/Room/components/ToolBarGame/ToolBarGame.module.scss
+++ b/src/components/QuizGame/components/Room/components/ToolBarGame/ToolBarGame.module.scss
@@ -6,6 +6,7 @@ $text-secondary: #a28089;
 
 .toolbar {
   max-width: 400px;
+  min-width: 300px;
   height: 15px;
   background-color: #f3e963;
   border: 2px solid #000;
