--- a/src/components/QuizGame/components/ToolBar/ToolBar.module.scss
+++ b/src/components/QuizGame/components/ToolBar/ToolBar.module.scss
@@ -10,7 +10,7 @@ $text-secondary: #a28089;
   background-color: #f3e963;
   border: 2px solid #000;
   border-radius: 5px;
-  margin: 0 auto;
+  margin: 30px auto 0;
 
   &__inner {
     height: 100%;
