--- a/src/components/QuizGame/components/JoinRoom/JoinRoom.module.scss
+++ b/src/components/QuizGame/components/JoinRoom/JoinRoom.module.scss
@@ -1,8 +1,4 @@
-$bg-main: #a0d2eb;
-$accent-primary: #e5eaf5;
-$accent-secondary: #d0bdf4;
-$text-main: #553974;
-$text-secondary: #795e65;
+@use "../../colors.scss" as *;
 
 .join {
   &__inner {
@@ -12,9 +8,9 @@ $text-secondary: #795e65;
     gap: 20px;
     padding: 20px;
     padding-bottom: 80px;
-    border: 2px solid $accent-secondary;
+    border: 2px solid $border-default;
     border-radius: 20px;
-    background-color: $accent-primary;
+    background-color: $bg-main;
     margin-bottom: 30px;
     position: relative;
   }
@@ -30,20 +26,20 @@ $text-secondary: #795e65;
 
   &__room {
     font-size: 25px;
-    color: $text-secondary;
+    color: $text-main;
 
     span {
-      color: $text-main;
+      color: $text-secondary;
     }
   }
 
   &__btn {
-    border: 2px solid $accent-secondary;
+    border: 2px solid $border-default;
     border-radius: 10px;
     padding: 10px;
     font-size: 20px;
     font-weight: 600;
-    background-color: $bg-main;
+    background-color: $bg-surface;
     color: $text-main;
     cursor: pointer;
     transition: all 0.3s;
@@ -64,9 +60,9 @@ $text-secondary: #795e65;
     gap: 20px;
     color: $text-main;
     font-size: 20px;
-    border: 2px solid $accent-secondary;
+    border: 2px solid $border-default;
     border-radius: 10px;
-    background-color: $bg-main;
+    background-color: $bg-surface;
     cursor: pointer;
     padding: 5px 10px;
     position: absolute;
@@ -101,16 +97,16 @@ $text-secondary: #795e65;
     align-items: center;
     gap: 10px;
     padding: 10px;
-    border: 2px solid $accent-secondary;
+    border: 2px solid $border-default;
     border-radius: 10px;
-    box-shadow: 0 0 10px 0 $accent-secondary;
+    box-shadow: 0 0 10px 0 $shadow-main;
   }
 
   &__spinner {
     height: 50px;
     width: 50px;
     border-radius: 50%;
-    background-color: $accent-primary;
+    background-color: $bg-main;
     margin: 0 auto;
     animation: loading 2s infinite ease-in-out;
   }
