import QuizGame colors.scss to daughter components

--- a/src/components/QuizGame/components/EndGame/EndGame.module.scss
+++ b/src/components/QuizGame/components/EndGame/EndGame.module.scss
@@ -71,7 +71,7 @@
     padding: 10px;
     border: 2px solid $border-default;
     border-radius: 10px;
-    background-color: $bg-main;
+    background-color: $bg-surface;
     transition: all 0.3s;
 
     &:active {
