--- a/src/components/QuizGame/components/Question/Question.module.scss
+++ b/src/components/QuizGame/components/Question/Question.module.scss
@@ -1,21 +1,16 @@
-$bg-main: #a0d2eb;
-$accent-primary: #e5eaf5;
-$accent-secondary: #d0bdf4;
-$text-main: #553974;
-$text-secondary: #a28089;
+@use "../../colors.scss" as *;
 
 .question {
   padding: 20px;
-  border: 2px solid $text-main;
+  border: 2px solid $border-default;
   border-radius: 20px;
-  background-color: $accent-primary;
-  box-shadow: 0 0 10px 0 $accent-primary;
+  background-color: $bg-main;
+  box-shadow: 0 0 10px 0 $shadow-main;
 
   &__title {
     font-size: 60px;
     font-weight: 600;
     color: $text-main;
-    text-shadow: 1px 1px $accent-primary;
 
     animation: scaleIn 0.6s ease forwards;
   }
@@ -30,12 +25,12 @@ $text-secondary: #a28089;
   &__item {
     text-align: center;
     padding: 20px;
-    border: 2px solid $accent-secondary;
+    border: 2px solid $border-default;
     border-radius: 10px;
     font-size: 40px;
-    background-color: $accent-primary;
+    background-color: $bg-main;
     color: $text-main;
-    box-shadow: 0 0 10px 0 $accent-secondary;
+    box-shadow: 0 0 10px 0 $shadow-main;
 
     opacity: 0;
     animation: fadeSlide 0.5s ease forwards;
