--- a/src/components/QuizGame/components/QuestionNumber/QuestionNumber.module.scss
+++ b/src/components/QuizGame/components/QuestionNumber/QuestionNumber.module.scss
@@ -1,22 +1,17 @@
-$bg-main: #a0d2eb;
-$accent-primary: #e5eaf5;
-$accent-secondary: #d0bdf4;
-$text-main: #553974;
-$text-secondary: #a28089;
+@use "../../colors.scss" as *;
 
 .title {
   font-size: 40px;
   font-weight: 600;
   color: $text-main;
-  text-shadow: 1px 1px $accent-primary;
   display: flex;
   flex-direction: column;
   gap: 20px;
   padding: 10px;
-  border: 2px solid $text-main;
+  border: 2px solid $border-default;
   border-radius: 20px;
-  background-color: $accent-primary;
-  box-shadow: 0 0 10px 0 $accent-primary;
+  background-color: $bg-main;
+  box-shadow: 0 0 10px 0 $shadow-main;
   margin-bottom: 20px;
 
   animation: fadeSlide 0.7s ease forwards;
