--- a/src/components/QuizGame/components/RightAnswer/RightAnswer.module.scss
+++ b/src/components/QuizGame/components/RightAnswer/RightAnswer.module.scss
@@ -1,18 +1,14 @@
-$bg-main: #a0d2eb;
-$accent-primary: #e5eaf5;
-$accent-secondary: #d0bdf4;
-$text-main: #553974;
-$text-secondary: #a28089;
+@use "../../colors.scss" as *;
 
 .right {
   text-align: center;
   padding: 20px;
-  border: 2px solid $accent-secondary;
+  border: 2px solid $border-default;
   border-radius: 20px;
   font-size: 60px;
-  background-color: $accent-primary;
+  background-color: $bg-main;
   color: $text-main;
-  box-shadow: 0 0 10px 0 $accent-primary;
+  box-shadow: 0 0 10px 0 $shadow-main;
 
   animation: boomIn 0.9s cubic-bezier(0.34, 1.56, 0.64, 1);
 
@@ -34,7 +30,7 @@ $text-secondary: #a28089;
     align-items: center;
     gap: 5px;
     padding: 5px 10px;
-    border: 2px solid $accent-secondary;
+    border: 2px solid $border-default;
     border-radius: 5px;
 
     opacity: 0;
