added _variables.scss for Room component and others daughters components and use it

--- a/src/components/QuizGame/colors.scss
+++ b/src/components/QuizGame/colors.scss
@@ -1,5 +1,5 @@
 $bg-main: #e5eaf5;
-$bg-surface: #a0d2eb;
+$bg-surface: #c2f4bd;
 $text-main: #553974;
 $text-secondary: #a28089;
 $border-default: #d0bdf4;
