--- a/src/components/QuizGame/components/Room/components/EnterTopic/components/TopicBtn.module.scss
+++ b/src/components/QuizGame/components/Room/components/EnterTopic/components/TopicBtn.module.scss
@@ -1,14 +1,10 @@
-$bg-main: #ebe6a0;
-$accent-primary: #f3f5e5;
-$accent-secondary: #c2f4bd;
-$text-main: #394c74;
-$text-secondary: #f8acac;
+@use "../../../variables" as *;
 
 .btn {
   padding: 10px;
-  border: 2px solid $text-main;
+  border: 2px solid $border-default;
   border-radius: 10px;
-  background-color: #fff;
+  background-color: $bg-unselected;
   cursor: pointer;
   transition: all 0.4s;
 
@@ -17,7 +13,7 @@ $text-secondary: #f8acac;
   }
 
   &__active {
-    background-color: $accent-secondary;
+    background-color: $bg-active;
   }
 }
 
