--- a/src/components/QuizGame/components/Room/components/EndGame/EndGame.module.scss
+++ b/src/components/QuizGame/components/Room/components/EndGame/EndGame.module.scss
@@ -1,8 +1,4 @@
-$bg-main: #ebe6a0;
-$accent-primary: #f3f5e5;
-$accent-secondary: #c2f4bd;
-$text-main: #394c74;
-$text-secondary: #f8acac;
+@use "../../variables" as *;
 
 .end {
   display: flex;
@@ -10,9 +6,9 @@ $text-secondary: #f8acac;
   align-items: center;
   gap: 30px;
   padding: 10px;
-  border: 2px solid #000;
+  border: 2px solid $border-default;
   border-radius: 10px;
-  background-color: #fff;
+  background-color: $bg-main;
 
   &__text {
     font-size: 30px;
@@ -24,7 +20,7 @@ $text-secondary: #f8acac;
     border: 2px solid #000;
     border-radius: 10px;
     width: 100%;
-    background-color: #fff;
+    background-color: $bg-main;
     text-align: center;
     font-size: 20px;
     cursor: pointer;
