--- a/src/components/QuizGame/components/Room/components/EnterTopic/EnterTopic.module.scss
+++ b/src/components/QuizGame/components/Room/components/EnterTopic/EnterTopic.module.scss
@@ -1,8 +1,4 @@
-$bg-main: #ebe6a0;
-$accent-primary: #f3f5e5;
-$accent-secondary: #c2f4bd;
-$text-main: #394c74;
-$text-secondary: #f8acac;
+@use "../../variables" as *;
 
 .topic {
   display: flex;
@@ -10,9 +6,9 @@ $text-secondary: #f8acac;
   justify-content: center;
   align-items: center;
   padding: 20px;
-  border: 2px solid $text-main;
+  border: 2px solid $border-default;
   border-radius: 10px;
-  background-color: $accent-primary;
+  background-color: $bg-main;
 
   &__title {
     font-size: 30px;
@@ -36,9 +32,9 @@ $text-secondary: #f8acac;
     font-weight: 600;
     color: $text-main;
     padding: 15px 20px;
-    border: 2px solid $text-main;
+    border: 2px solid $border-default;
     border-radius: 10px;
-    background-color: $accent-secondary;
+    background-color: $bg-active;
     cursor: pointer;
     transition: all 0.4s;
   }
@@ -48,7 +44,7 @@ $text-secondary: #f8acac;
   }
 
   &__btn:disabled {
-    background-color: #fff;
+    background-color: $bg-error;
     cursor: not-allowed;
   }
 }
