--- a/src/components/QuizGame/components/Room/components/Form/Form.module.scss
+++ b/src/components/QuizGame/components/Room/components/Form/Form.module.scss
@@ -1,8 +1,4 @@
-$bg-main: #ebe6a0;
-$accent-primary: #f3f5e5;
-$accent-secondary: #c2f4bd;
-$text-main: #394c74;
-$text-secondary: #f8acac;
+@use "../../variables" as *;
 
 .form {
   display: flex;
@@ -12,9 +8,9 @@ $text-secondary: #f8acac;
   padding: 20px;
   margin: 0 auto;
   width: 280px;
-  border: 2px solid $text-main;
+  border: 2px solid $border-default;
   border-radius: 20px;
-  background-color: $accent-primary;
+  background-color: $bg-main;
 
   &__label {
     display: flex;
@@ -26,7 +22,7 @@ $text-secondary: #f8acac;
   &__input-name,
   &__input-room {
     width: 240px;
-    border: 2px solid $text-main;
+    border: 2px solid $border-default;
     border-radius: 10px;
     padding: 10px;
     color: $text-main;
@@ -36,11 +32,11 @@ $text-secondary: #f8acac;
   }
 
   &__btn {
-    border: 2px solid $text-main;
+    border: 2px solid $border-default;
     border-radius: 10px;
     padding: 10px;
     color: $text-main;
-    background-color: $accent-secondary;
+    background-color: $bg-active;
     font-size: 18px;
     cursor: pointer;
     transition: all 0.3s;
@@ -50,7 +46,7 @@ $text-secondary: #f8acac;
     }
 
     &:disabled {
-      background-color: $text-secondary;
+      background-color: $bg-error;
       cursor: not-allowed;
     }
   }
