--- a/src/components/QuizGame/components/Room/components/Game/components/GameQuestion/GameQuestion.module.scss
+++ b/src/components/QuizGame/components/Room/components/Game/components/GameQuestion/GameQuestion.module.scss
@@ -1,12 +1,8 @@
-$bg-main: #a0d2eb;
-$accent-primary: #e5eaf5;
-$accent-secondary: #d0bdf4;
-$text-main: #553974;
-$text-secondary: #a28089;
+@use "../../../../variables" as *;
 
 .game {
   padding: 20px;
-  background-color: $accent-primary;
+  background-color: $bg-main;
   border: 2px solid #000;
   border-radius: 20px;
 
@@ -14,9 +10,9 @@ $text-secondary: #a28089;
     font-size: 30px;
     text-align: center;
     padding: 10px 20px;
-    border: 2px solid #000;
+    border: 2px solid $border-default;
     border-radius: 10px;
-    background-color: #fff;
+    background-color: $bg-unselected;
   }
 
   &__answers {
@@ -29,10 +25,10 @@ $text-secondary: #a28089;
 
   &__answer {
     padding: 10px;
-    border: 2px solid #000;
+    border: 2px solid $border-default;
     border-radius: 10px;
     width: 90%;
-    background-color: #fff;
+    background-color: $bg-unselected;
     text-align: center;
     font-size: 20px;
     cursor: pointer;
@@ -42,27 +38,10 @@ $text-secondary: #a28089;
       transform: scale(0.9);
     }
   }
-
-  // &__bar {
-  //   max-width: 400px;
-  //   height: 15px;
-  //   background-color: #f3e963;
-  //   border: 2px solid #000;
-  //   border-radius: 5px;
-  //   margin: 0 auto;
-  // }
-
-  // &__bar--active {
-  //   height: 100%;
-  //   border: 0 solid $text-secondary;
-  //   border-radius: 5px;
-  //   background-color: #fff;
-  //   transition: width 1s linear;
-  // }
 }
 
 .chosen {
-  background-color: rgb(246, 248, 99);
+  background-color: $bg-active;
 }
 
 .fadeIn {
@@ -167,12 +146,6 @@ $text-secondary: #a28089;
 }
 
 @keyframes blurIn {
-  // from {
-  //   filter: blur(20px);
-  // }
-  // to {
-  //   filter: blur(0);
-  // }
   0% {
     filter: blur(10px);
   }
