--- a/src/components/QuizGame/components/Room/components/ReadyGame/ReadyGame.module.scss
+++ b/src/components/QuizGame/components/Room/components/ReadyGame/ReadyGame.module.scss
@@ -1,14 +1,10 @@
-$bg-main: #ebe6a0;
-$accent-primary: #f3f5e5;
-$accent-secondary: #c2f4bd;
-$text-main: #394c74;
-$text-secondary: #f8acac;
+@use "../../variables" as *;
 
 .ready {
   font-size: 30px;
   color: $text-main;
   padding: 10px;
-  border: 2px solid #000;
+  border: 2px solid $border-default;
   border-radius: 10px;
-  background-color: #fff;
+  background-color: $bg-main;
 }
