--- a/src/components/QuizGame/components/Room/components/ToolBarGame/ToolBarGame.module.scss
+++ b/src/components/QuizGame/components/Room/components/ToolBarGame/ToolBarGame.module.scss
@@ -1,23 +1,18 @@
-$bg-main: #a0d2eb;
-$accent-primary: #e5eaf5;
-$accent-secondary: #d0bdf4;
-$text-main: #553974;
-$text-secondary: #a28089;
+@use "../../variables" as *;
 
 .toolbar {
   max-width: 400px;
   min-width: 300px;
   height: 15px;
-  background-color: #f3e963;
-  border: 2px solid #000;
+  border: 2px solid $border-default;
   border-radius: 5px;
   margin: 0 auto;
 
   &__inner {
     height: 100%;
-    border: 0 solid $text-secondary;
+    border: 0 solid $border-default;
     border-radius: 5px;
-    background-color: #fff;
+    background-color: $bg-active;
     transition: width 1s linear;
   }
 }
