--- a/src/components/QuizGame/components/Room/components/UndefinedRoom/UndefinedRoom.module.scss
+++ b/src/components/QuizGame/components/Room/components/UndefinedRoom/UndefinedRoom.module.scss
@@ -1,17 +1,13 @@
-$bg-main: #ebe6a0;
-$accent-primary: #f3f5e5;
-$accent-secondary: #c2f4bd;
-$text-main: #394c74;
-$text-secondary: #f8acac;
+@use "../../variables" as *;
 
 .undefined {
   display: flex;
   flex-direction: column;
   gap: 10px;
   padding: 20px;
-  color: #000;
-  background-color: $text-secondary;
-  border: 2px solid #000;
+  color: $text-main;
+  background-color: $bg-error;
+  border: 2px solid $border-default;
   border-radius: 20px;
   text-align: center;
   margin-top: 30px;
