--- a/src/components/QuizGame/components/EndGame/EndGame.module.scss
+++ b/src/components/QuizGame/components/EndGame/EndGame.module.scss
@@ -1,4 +1,4 @@
-@use "../../colors.scss" as *;
+@use "../../variables" as *;
 
 .end {
   display: flex;
@@ -21,7 +21,7 @@
     justify-content: center;
     gap: 10px;
     padding: 20px;
-    border: 2px solid $text-main;
+    border: 2px solid $border-default;
     border-radius: 20px;
     background-color: $bg-main;
   }
