--- a/src/components/QuizGame/components/Room/components/VisualMemoryGameRoom/components/VisualMemoryResult/VisualMemoryResult.module.scss
+++ b/src/components/QuizGame/components/Room/components/VisualMemoryGameRoom/components/VisualMemoryResult/VisualMemoryResult.module.scss
@@ -1,4 +1,4 @@
-@use "../../variables" as *;
+@use "../../../../variables" as *;
 
 .memory {
   display: flex;
@@ -11,19 +11,7 @@
   border: 2px solid $border-default;
   border-radius: 10px;
 
-  &__answer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    padding: 20px;
-    background-color: $bg-main;
-    border: 2px solid $border-default;
-    border-radius: 10px;
-
-    animation: boomIn 0.9s cubic-bezier(0.34, 1.56, 0.64, 1);
-  }
+  animation: boomIn 0.9s cubic-bezier(0.34, 1.56, 0.64, 1);
 
   &__title {
     font-size: 30px;
@@ -51,45 +39,8 @@
     background-color: $bg-unselected;
   }
 
-  &__item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 5px;
-    padding: 5px;
-    border: 2px solid $border-default;
-    border-radius: 10px;
-    background-color: $bg-unselected;
-    cursor: pointer;
-    transition: all 0.4s;
-
-    &:active {
-      transform: scale(0.9);
-    }
-  }
-
   &__item-name {
     font-size: 20px;
-  }
-
-  &__btn {
-    padding: 10px;
-    border: 2px solid $border-default;
-    border-radius: 10px;
-    background-color: $bg-active;
-    color: $text-main;
-    font-size: 20px;
-    cursor: pointer;
-    transition: all 0.4s;
-
-    &:disabled {
-      background-color: $bg-error;
-      cursor: not-allowed;
-    }
-
-    &:active {
-      transform: scale(0.9);
-    }
   }
 }
 
