--- a/src/components/QuizGame/components/Room/components/ChooseObstruction/components/Players/Players.module.scss
+++ b/src/components/QuizGame/components/Room/components/ChooseObstruction/components/Players/Players.module.scss
@@ -6,7 +6,6 @@
   align-items: center;
   flex-wrap: wrap;
   gap: 20px;
-  margin-bottom: 20px;
 
   &__player {
     padding: 10px;
@@ -24,5 +23,19 @@
 
   &__player--active {
     background-color: $bg-active;
+  }
+}
+
+@media (max-width: 500px) {
+  .players {
+    &__players {
+      gap: 10px;
+      margin-bottom: 10px;
+    }
+
+    &__player {
+      padding: 7px 10px;
+      font-size: 16px;
+    }
   }
 }
