--- a/src/components/QuizGame/components/Room/components/VisualMemoryGameRoom/components/VisualMemoryChoose/VisualMemoryChoose.module.scss
+++ b/src/components/QuizGame/components/Room/components/VisualMemoryGameRoom/components/VisualMemoryChoose/VisualMemoryChoose.module.scss
@@ -58,3 +58,11 @@
     font-size: 20px;
   }
 }
+
+@media (max-width: 500px) {
+  .memory {
+    &__item-name {
+      font-size: 16px;
+    }
+  }
+}
