added color in btn disables styles in JoinRoom component

--- a/src/components/QuizGame/_variables.scss
+++ b/src/components/QuizGame/_variables.scss
@@ -1,5 +1,6 @@
 $bg-main: #e5eaf5;
 $bg-surface: #c2f4bd;
+$bg-error: #f8acac;
 $text-main: #553974;
 $text-secondary: #a28089;
 $border-default: #d0bdf4;
