--- a/src/components/QuizGame/components/Room/components/RoomUnavavailable/RoomUnavailable.module.scss
+++ b/src/components/QuizGame/components/Room/components/RoomUnavavailable/RoomUnavailable.module.scss
@@ -11,4 +11,20 @@
   border-radius: 20px;
   text-align: center;
   margin-top: 30px;
+  transform: scale(0);
+  opacity: 0;
+
+  animation: animate 1s ease forwards;
+  animation-delay: 2s;
+}
+
+@keyframes animate {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
