--- a/src/components/QuizGame/components/Room/components/MoviesGame/components/MoviesGameQuestion/MoviesGameQuestion.module.scss
+++ b/src/components/QuizGame/components/Room/components/MoviesGame/components/MoviesGameQuestion/MoviesGameQuestion.module.scss
@@ -63,12 +63,12 @@
       font-size: 16px;
     }
 
-    &__right {
-      padding: 10px;
+    // &__right {
+    //   padding: 10px;
 
-      h2 {
-        font-size: 20px;
-      }
-    }
+    //   h2 {
+    //     font-size: 20px;
+    //   }
+    // }
   }
 }
